# biospectral-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/biospectral_cli/: __init__.py  __main__.py
