[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biospectral-cli"
version = "0.1.0"
description = "Command-line interface for biospectral: Dirichlet L-function spectral analysis of DNA and protein sequences"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Konstantin Parashchuk" }]
keywords = ["dirichlet-l", "dna", "protein", "bioinformatics", "spectral-analysis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biospectral>=1.0.0",
    "numpy>=1.22",
]

[project.scripts]
biospectral-cli = "biospectral_cli:main"

[project.urls]
"Repository" = "https://github.com/kostyk348/biospectral-cli"

[tool.setuptools.packages.find]
where = ["src"]
